--- a/style/index.css
+++ b/style/index.css
@@ -6,17 +6,21 @@
 body
 {
     font-family: Arial, sans-serif;
+    height: 100vh;
+}
+::-webkit-scrollbar {
+    display: none;
 }
 .main
 {
     background-color: #D8E5F1;
     width: 100%;
-    height: 92vh;
+    height: 92%;
     overflow: scroll;
 }
 .header
 {
-    height: 8vh;
+    height: 8%;
     background-color: #337AB7;
     display: flex;
     align-items: center;
